// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty.js-flow 1`] = `
"try {
} catch (e) {
}
finally {
}

try {
} catch (e) {
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
try {
} catch (e) {
} finally {
}

try {
} catch (e) {}
"
`;

exports[`empty.js-typescript 1`] = `
"try {
} catch (e) {
}
finally {
}

try {
} catch (e) {
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
try {
} catch (e) {
} finally {
}

try {
} catch (e) {}
"
`;

exports[`try.js-flow 1`] = `
"try
/* missing comment */
{;}
finally {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
try {
  /* missing comment */
} finally {
}
"
`;

exports[`try.js-typescript 1`] = `
"try
/* missing comment */
{;}
finally {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
try {
  /* missing comment */
} finally {
}
"
`;
